# ex6_2016

./: .exercise2.sh.swp  .job.sh.swp  CMakeLists.txt  common.c  common.h  compiling.sh  exercise2.sh  job.sh  main.c  parallelPoisson.c  parallelPoisson.h  serialPoisson.c  serialPoisson.h
test/: CMakeCache.txt  Makefile  cmake_install.cmake  poisson
